; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_opticon.c_opticon_resume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_opticon.c_opticon_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.usb_serial = type { %struct.usb_serial_port** }
%struct.usb_serial_port = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.opticon_private = type { i32 }

@GFP_NOIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_interface*)* @opticon_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opticon_resume(%struct.usb_interface* %0) #0 {
  %2 = alloca %struct.usb_interface*, align 8
  %3 = alloca %struct.usb_serial*, align 8
  %4 = alloca %struct.opticon_private*, align 8
  %5 = alloca %struct.usb_serial_port*, align 8
  %6 = alloca i32, align 4
  store %struct.usb_interface* %0, %struct.usb_interface** %2, align 8
  %7 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %8 = call %struct.usb_serial* @usb_get_intfdata(%struct.usb_interface* %7)
  store %struct.usb_serial* %8, %struct.usb_serial** %3, align 8
  %9 = load %struct.usb_serial*, %struct.usb_serial** %3, align 8
  %10 = call %struct.opticon_private* @usb_get_serial_data(%struct.usb_serial* %9)
  store %struct.opticon_private* %10, %struct.opticon_private** %4, align 8
  %11 = load %struct.usb_serial*, %struct.usb_serial** %3, align 8
  %12 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %11, i32 0, i32 0
  %13 = load %struct.usb_serial_port**, %struct.usb_serial_port*** %12, align 8
  %14 = getelementptr inbounds %struct.usb_serial_port*, %struct.usb_serial_port** %13, i64 0
  %15 = load %struct.usb_serial_port*, %struct.usb_serial_port** %14, align 8
  store %struct.usb_serial_port* %15, %struct.usb_serial_port** %5, align 8
  %16 = load %struct.usb_serial_port*, %struct.usb_serial_port** %5, align 8
  %17 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %16, i32 0, i32 0
  %18 = call i32 @mutex_lock(i32* %17)
  %19 = load %struct.usb_serial_port*, %struct.usb_serial_port** %5, align 8
  %20 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %1
  %25 = load %struct.opticon_private*, %struct.opticon_private** %4, align 8
  %26 = getelementptr inbounds %struct.opticon_private, %struct.opticon_private* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @GFP_NOIO, align 4
  %29 = call i32 @usb_submit_urb(i32 %27, i32 %28)
  store i32 %29, i32* %6, align 4
  br label %31

30:                                               ; preds = %1
  store i32 0, i32* %6, align 4
  br label %31

31:                                               ; preds = %30, %24
  %32 = load %struct.usb_serial_port*, %struct.usb_serial_port** %5, align 8
  %33 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %32, i32 0, i32 0
  %34 = call i32 @mutex_unlock(i32* %33)
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local %struct.usb_serial* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local %struct.opticon_private* @usb_get_serial_data(%struct.usb_serial*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @usb_submit_urb(i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
